--- a/gui/src/style.css
+++ b/gui/src/style.css
@@ -1,97 +1,105 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  --loader-width: 4%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+body{
+  background: #000;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.title{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin-left: 50px;
+  color: white;
+  font-size: 75px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  user-select: none;
+  text-transform: uppercase;
+  letter-spacing: 100px;
+  opacity: 1;
+  animation: title-load 0.5s ease-in-out;
+  text-align: center;
+  transition: 0.5s;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.link-code{
+  opacity: 0;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, calc(-50% + 50px));
+  color: white;
+  font-size: 150px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  user-select: none;
+  text-transform: uppercase;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #3178c6aa);
+.code-timer{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, calc(-50% + 150px));
+  width: 300px;
+  height: 20px;
 }
 
-.card {
-  padding: 2em;
+.code-timer .timer-inner{
+  opacity: 0;
+  height: 20px;
+  width: 100%;
+  background: white;
 }
 
-.read-the-docs {
-  color: #888;
+.web-url{
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  color: #aaa;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.alert{
+  position: fixed;
+  top: 50px;
+  left: -430px;
+  width: 400px;
+  background: rgba(68, 68, 68, 0.568);
+  backdrop-filter: blur(10px);
+  min-height: 70px;
+  border-bottom: #00ccff 10px solid;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  padding: 10px;
+  color: white;
+  transition: 0.5s;
+  box-shadow: #0005 0 0 10px;
+  opacity: 0;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.alert-title{
+  font-size: 25px;
+}
+
+.alert-body{
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  height: 40px;
+  color: #ccc;
+}
+
+@keyframes title-load {
+  0%{
+    transform: translate(0, -50%);
+    letter-spacing: 50px;
+    opacity: 0;
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+  100%{
+    transform: translate(-50%, -50%);
+    letter-spacing: 100px;
+    opacity: 1;
   }
 }
