--- a/panel/src/style.css
+++ b/panel/src/style.css
@@ -67,7 +67,7 @@ body{
   text-align: center;
 }
 
-input{
+input[type="text"]{
   padding: 10px 15px;
   display: inline-block;
   background: #3f3f3f;
@@ -81,7 +81,7 @@ input{
   font-size: 15px;
 }
 
-input:focus{
+input[type="text"]:focus{
   border: 2px #555 solid;
 }
 
@@ -299,7 +299,7 @@ input:focus{
   background: #444;
   border-radius: 10px;
   box-shadow: #0005 0 0 10px;
-  width: 400px;
+  width: 275px;
   text-align: center;
   display: none;
   opacity: 0;
